--- a/layouts/404.html
+++ b/layouts/404.html
@@ -7,6 +7,16 @@
   {{ partial "head/favicon.html" . }}
   {{ partial "meta/theme-color.html" . }}
   {{ template "_internal/google_analytics_async.html" . }}
+  <meta name="description" content="This isn't the page you're looking for.">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="This isn't the page you're looking for.">
+  <meta property="og:title" content="404 Error | {{ .Site.Title }}">
+  <meta property="og:site_name" content="{{ .Site.Title }}" />
+  <meta property="og:image" content="{{ .Site.BaseURL }}images/404.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:height" content="1200">
+  <meta property="og:image:width" content="1920">
+  <link rel="canonical" href="{{ .Site.BaseURL }}404.html">
   <style media="screen">
     @keyframes intro {
       0% {
