--- a/static/addons/gallery/default-skin/default-skin.css
+++ b/static/addons/gallery/default-skin/default-skin.css
@@ -1,4 +1,5 @@
 /*! PhotoSwipe Default UI CSS by Dmitry Semenov | photoswipe.com | MIT license */
+/*! Customizations © 2017, 13AMDq9isKtQTxMQG4w7Yo7cEhqKAqQ4Lz | BTC license */
 /*
 
 	Contents:
@@ -52,7 +53,7 @@
 .pswp__button,
 .pswp__button--arrow--left:before,
 .pswp__button--arrow--right:before {
-  background: url(/css/vendor/photoswipe/default-skin/default-skin.png) 0 0 no-repeat;
+  background: url(/addons/gallery/default-skin/default-skin.png) 0 0 no-repeat;
   background-size: 264px 88px;
   width: 44px;
   height: 44px; }
@@ -62,7 +63,7 @@
   .pswp--svg .pswp__button,
   .pswp--svg .pswp__button--arrow--left:before,
   .pswp--svg .pswp__button--arrow--right:before {
-    background-image: url(/css/vendor/photoswipe/default-skin/default-skin.svg); }
+    background-image: url(/addons/gallery/default-skin/default-skin.svg); }
   .pswp--svg .pswp__button--arrow--left,
   .pswp--svg .pswp__button--arrow--right {
     background: none; } }
@@ -316,7 +317,7 @@ a.pswp__share--download:hover {
   opacity: 1; }
   .pswp__preloader--active .pswp__preloader__icn {
     /* We use .gif in browsers that don't support CSS animation */
-    background: url(/css/vendor/photoswipe/default-skin/preloader.gif) 0 0 no-repeat; }
+    background: url(/addons/gallery/default-skin/preloader.gif) 0 0 no-repeat; }
 
 .pswp--css_animation .pswp__preloader--active {
   opacity: 1; }
