--- a/layouts/shortcodes/outbound.html
+++ b/layouts/shortcodes/outbound.html
@@ -1,3 +1,3 @@
 <!-- {{/*
-Usage: {{% outbound "TITLE" "URL" %}}
-*/}}--><a target="_blank" href="{{ .Get 1 }}" onclick="trackOutboundLink('{{ .Get 1 | replaceRE "^https?://([^/]+).*" "$1" }}')">{{ .Get 0 | markdownify }}</a>
+Usage: {{< outbound "**BODY**" "URL" "OPTIONAL TITLE" >}}
+*/}}--><a target="_blank" rel="noopener" href="{{ .Get 1 }}" onclick="trackOutboundLink('{{ .Get 1 | replaceRE "^https?://([^/]+).*" "$1" }}')" {{ with .Get 2 }}title="{{ . }}"{{ end }}>{{ .Get 0 | markdownify }}</a>
