--- a/layouts/shortcodes/referral.html
+++ b/layouts/shortcodes/referral.html
@@ -1,3 +1,3 @@
 <!-- {{/*
 Usage: {{< outbound "**BODY**" "URL" "OPTIONAL TITLE" >}}
-*/}}--><a target="_blank" rel="nofollow noopener" href="{{ .Get 1 }}" onclick="goog_report_conversion(); trackReferralLink('{{ .Get 1 | replaceRE "^https?://|/go/([^/]+).*" "$1" }}')" {{ with .Get 2 }}title="{{ . }}"{{ end }}>{{- .Get 0 | markdownify -}}</a>
+*/}}--><a target="_blank" rel="external nofollow noopener" href="{{ .Get 1 }}" onclick="goog_report_conversion(); trackReferralLink('{{ .Get 1 | replaceRE "^https?://|/go/([^/]+).*" "$1" }}')" {{ with .Get 2 }}title="{{ . }}"{{ end }}>{{- .Get 0 | markdownify -}}</a>
