Add mining disclaimer

--- a/layouts/shortcodes/disclaimer.html
+++ b/layouts/shortcodes/disclaimer.html
@@ -8,4 +8,7 @@
   {{ if eq $type "affiliate" }}
     <small>Please note that some of the above links are affiliate links which means I will receive a small commission if you buy through them (you won’t pay any extra). These are all products that I love and have used myself. If you choose to buy through these links, thank you for your support.</small>
   {{ end }}
+  {{ if eq $type "affiliate-mining" }}
+    <small>Please note that some of the above links are affiliate links which means I will receive a small commission if you buy through them (you won’t pay any extra). If you choose to buy through these links, thank you for your support.</small>
+  {{ end }}
 {{ end }}
