Add gallery shortcode, addon components

--- a/layouts/partials/addons/gallery/gallery.html
+++ b/layouts/partials/addons/gallery/gallery.html
@@ -1,3 +1,8 @@
+<!-- TODO: COMBINE WITH SHORTCODE -->
+<!-- TODO: COMBINE WITH SHORTCODE -->
+<!-- TODO: COMBINE WITH SHORTCODE -->
+<!-- TODO: COMBINE WITH SHORTCODE -->
+
 <style media="screen,projection">
   [itemtype="http://schema.org/ImageGallery"] {
     display: flex;
@@ -8,19 +13,23 @@
     /*width: 20%;*/
     /*margin-bottom: 10px;*/
   }
-  .visually-hidden {
+  /*.visually-hidden {
     position: absolute !important;
     clip: rect(1px, 1px, 1px, 1px);
     height: 1px !important;
     width: 1px !important;
     border: 0 !important;
     overflow: hidden;
-  }
+  }*/
   [itemtype="http://schema.org/ImageGallery"] figure {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
+  }
+  [itemtype="http://schema.org/ImageGallery"] figure figcaption {
+    font-size: 1rem;
+    margin-bottom: 10px;
   }
   [itemtype="http://schema.org/ImageGallery"] figure a {
     border-bottom: none;
