--- a/layouts/partials/addons/gallery/pswp.html
+++ b/layouts/partials/addons/gallery/pswp.html
@@ -1,58 +1,100 @@
-{{ if .Params.gallery.main }}
-  <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="pswp__bg"></div>
-    <div class="pswp__scroll-wrap">
-      <div class="pswp__container">
-        <div class="pswp__item"></div>
-        <div class="pswp__item"></div>
-        <div class="pswp__item"></div>
-      </div>
-      <div class="pswp__ui pswp__ui--hidden">
-        <div class="pswp__top-bar">
-          <div class="pswp__counter"></div>
-          <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-          <button class="pswp__button pswp__button--share" title="Share"></button>
-          <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-          <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-          <div class="pswp__preloader">
-            <div class="pswp__preloader__icn">
-              <div class="pswp__preloader__cut">
-                <div class="pswp__preloader__donut"></div>
-              </div>
+<style media="screen,projection">
+  [itemtype="http://schema.org/ImageGallery"] {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto 20px auto;
+  }
+  [itemprop="associatedMedia"] {
+    /*width: 20%;*/
+    /*margin-bottom: 10px;*/
+  }
+  .visually-hidden {
+    position: absolute !important;
+    clip: rect(1px, 1px, 1px, 1px);
+    height: 1px !important;
+    width: 1px !important;
+    border: 0 !important;
+    overflow: hidden;
+  }
+  [itemtype="http://schema.org/ImageGallery"] figure {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+  }
+  [itemtype="http://schema.org/ImageGallery"] figure figcaption {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+  [itemtype="http://schema.org/ImageGallery"] figure a {
+    border-bottom: none;
+  }
+  [itemtype="http://schema.org/ImageGallery"] a[href*="://"]::after {
+    /* override theme data uri svg icon */
+    content: "";
+  }
+  .pswp__share-tooltip a[href*="://"]::after {
+    /* override theme data uri svg icon */
+    content: "";
+  }
+  [itemtype="http://schema.org/ImageGallery"] figure a:hover {
+    background-color: inherit;
+  }
+</style>
+<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="pswp__bg"></div>
+  <div class="pswp__scroll-wrap">
+    <div class="pswp__container">
+      <div class="pswp__item"></div>
+      <div class="pswp__item"></div>
+      <div class="pswp__item"></div>
+    </div>
+    <div class="pswp__ui pswp__ui--hidden">
+      <div class="pswp__top-bar">
+        <div class="pswp__counter"></div>
+        <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+        <button class="pswp__button pswp__button--share" title="Share"></button>
+        <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+        <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+        <div class="pswp__preloader">
+          <div class="pswp__preloader__icn">
+            <div class="pswp__preloader__cut">
+              <div class="pswp__preloader__donut"></div>
             </div>
           </div>
         </div>
-        <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-          <div class="pswp__share-tooltip"></div>
-        </div>
-        <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-        </button>
-        <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-        </button>
-        <div class="pswp__caption">
-          <div class="pswp__caption__center"></div>
-        </div>
+      </div>
+      <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+        <div class="pswp__share-tooltip"></div>
+      </div>
+      <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+      </button>
+      <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+      </button>
+      <div class="pswp__caption">
+        <div class="pswp__caption__center"></div>
       </div>
     </div>
   </div>
+</div>
 
-  {{ partial "addons/gallery/initialize.js" . }}
-  <script>
-    /*! Fetch Inject v1.7.0 | (c) 2017 Josh Habdas | @license ISC */
-    var fetchInject=function(){"use strict";const e=function(e,t,n,r,o,i,c){i=t.createElement(n),c=t.getElementsByTagName(n)[0],i.appendChild(t.createTextNode(r.text)),i.onload=o(r),c?c.parentNode.insertBefore(i,c):t.head.appendChild(i)};return function(t,n){if(!t||!Array.isArray(t))return Promise.reject(new Error("`inputs` must be an array"));if(n&&!(n instanceof Promise))return Promise.reject(new Error("`promise` must be a promise"));const r=[],o=n?[].concat(n):[],i=[];return t.forEach(e=>o.push(window.fetch(e).then(e=>[e.clone().text(),e.blob()]).then(e=>Promise.all(e).then(e=>{r.push({text:e[0],blob:e[1]})})))),Promise.all(o).then(()=>{r.forEach(t=>{i.push({then:n=>{t.blob.type.includes("text/css")?e(window,document,"style",t,n):e(window,document,"script",t,n)}})});return Promise.all(i)})}}();
-    fetchInject([
-      '{{ .Site.BaseURL }}addons/gallery/photoswipe.css',
-      '{{ .Site.BaseURL }}addons/gallery/default-skin/default-skin.css',
-      '{{ .Site.BaseURL }}addons/gallery/photoswipe.min.js',
-      '{{ .Site.BaseURL }}addons/gallery/photoswipe-ui-default.min.js'
-    ]).then(() => {
-      // const el = document.querySelectorAll('.pswp')[0]
-      // const items = JSON.parse({{ .Params.gallery.main | jsonify }})
-      // const gallery = new PhotoSwipe(el, PhotoSwipeUI_Default, items)
-      // gallery.init()
-      //
-      initPhotoSwipeFromDOM('[itemtype="http://schema.org/ImageGallery"]')
-    })
-  </script>
-  <script async src="{{ .Site.BaseURL }}addons/gallery/masonry.pkgd.min.js"></script>
-{{ end }}
+{{ partial "addons/gallery/initialize.js.html" . }}
+
+<script>
+  /*! Fetch Inject v1.7.0 | (c) 2017 Josh Habdas | @license ISC */
+  var fetchInject=function(){"use strict";const e=function(e,t,n,r,o,i,c){i=t.createElement(n),c=t.getElementsByTagName(n)[0],i.appendChild(t.createTextNode(r.text)),i.onload=o(r),c?c.parentNode.insertBefore(i,c):t.head.appendChild(i)};return function(t,n){if(!t||!Array.isArray(t))return Promise.reject(new Error("`inputs` must be an array"));if(n&&!(n instanceof Promise))return Promise.reject(new Error("`promise` must be a promise"));const r=[],o=n?[].concat(n):[],i=[];return t.forEach(e=>o.push(window.fetch(e).then(e=>[e.clone().text(),e.blob()]).then(e=>Promise.all(e).then(e=>{r.push({text:e[0],blob:e[1]})})))),Promise.all(o).then(()=>{r.forEach(t=>{i.push({then:n=>{t.blob.type.includes("text/css")?e(window,document,"style",t,n):e(window,document,"script",t,n)}})});return Promise.all(i)})}}();
+  fetchInject([
+    '{{ .Site.BaseURL }}addons/gallery/photoswipe.css',
+    '{{ .Site.BaseURL }}addons/gallery/default-skin/default-skin.css',
+    '{{ .Site.BaseURL }}addons/gallery/photoswipe.min.js',
+    '{{ .Site.BaseURL }}addons/gallery/photoswipe-ui-default.min.js'
+  ]).then(() => {
+    // const el = document.querySelectorAll('.pswp')[0]
+    // const items = JSON.parse({{/* .Params.gallery.main | jsonify */}})
+    // const gallery = new PhotoSwipe(el, PhotoSwipeUI_Default, items)
+    // gallery.init()
+    //
+    initPhotoSwipeFromDOM('[itemtype="http://schema.org/ImageGallery"]')
+  })
+</script>
+<script async src="{{ .Site.BaseURL }}addons/gallery/masonry.pkgd.min.js"></script>
