--- a/layouts/partials/head/critical-custom.css
+++ b/layouts/partials/head/critical-custom.css
@@ -1,1 +1,180 @@
+figure img {
+    max-width: 100%;
+}
 
+a, a:hover {
+    border-color: #cc6666;
+}
+
+a[href*="://"]::after, a[rel*="external"] {
+	content: " " url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20class='i-external'%20viewBox='0%200%2032%2032'%20width='14'%20height='14'%20fill='none'%20stroke='%23de955f'%20stroke-linecap='round'%20stroke-linejoin='round'%20stroke-width='9.38%'%3E%3Cpath%20d='M14%209%20L3%209%203%2029%2023%2029%2023%2018%20M18%204%20L28%204%2028%2014%20M28%204%20L14%2018'/%3E%3C/svg%3E");
+}
+
+a[href*="://"]:hover::after, a[rel*="external"]:hover {
+	content: " " url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20class='i-external'%20viewBox='0%200%2032%2032'%20width='14'%20height='14'%20fill='none'%20stroke='%23ffffff'%20stroke-linecap='round'%20stroke-linejoin='round'%20stroke-width='9.38%'%3E%3Cpath%20d='M14%209%20L3%209%203%2029%2023%2029%2023%2018%20M18%204%20L28%204%2028%2014%20M28%204%20L14%2018'/%3E%3C/svg%3E");
+}
+
+.muted a {
+    color: inherit;
+}
+
+a[itemprop="url"] {
+	color: #de955f;
+}
+
+a:hover {
+    background-color: #cc6666;
+    border-color: #fff;
+    color: #fff;
+}
+
+.dark {
+    color: #c5c8c6;
+}
+
+.dark, .dark pre {
+    background-color: #1d1f21
+}
+
+.dark h1 {
+    color: #8abeb7;
+    font-weight: bold;
+}
+
+.hack h2 {
+    overflow: hidden;
+    padding-bottom: 15px;
+}
+
+.hack h2::before {
+    content: "";
+}
+
+.hack h2::after {
+	content: "----------------------------------------------------------------------------------------------------";
+	position: absolute;
+	bottom: 0px;
+	left: 0;
+}
+
+.hack h2[itemprop="name"] {
+    padding-bottom: 0;
+}
+
+.hack h2[itemprop="name"]::after {
+    content: "";
+}
+
+.dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
+    color: #b5bd68;
+}
+
+.dark pre code {
+    color: #81a2be;
+}
+
+.logo {
+    text-align: center;
+    font-size: 200%;
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
+.logo-linux-1, .logo-lefty-1 {
+    font-size: 200%;
+    font-weight: bold;
+}
+
+.logo-linux-1 {
+    color: #8abeb7;
+}
+
+.logo-lefty-1 {
+    color: #81a2be;
+}
+
+.logo-linux-2, .logo-lefty-2 {
+    color: #b5bd68;
+}
+
+.logo-linux-3, .logo-lefty-3 {
+    color: #f0c674;
+}
+
+.logo-linux-4, .logo-lefty-4 {
+    color: #de935f;
+}
+
+.logo-linux-5, .logo-lefty-5 {
+    color: #cc6666;
+}
+
+@media screen and (min-width: 480px) {
+    .logo {
+        text-align: center;
+        font-size: 400%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .logo {
+        text-align: center;
+        font-size: 600%;
+    }
+}
+
+.logo:hover .logo-linux .logo-linux-1 {
+    -webkit-transform:rotateY(180deg);
+    -moz-transform:rotateY(180deg);
+    -o-transform:rotateY(180deg);
+    -ms-transform:rotateY(180deg);
+    display:inline-block;
+}
+
+.logo-overlay .logo-linux-1, .logo-overlay:hover .logo-lefty-1 {
+    -webkit-transform:rotateY(0deg);
+    -moz-transform:rotateY(0deg);
+    -o-transform:rotateY(0deg);
+    -ms-transform:rotateY(0deg);
+    display:inline-block;
+}
+
+.logo:hover .logo-lefty .logo-lefty-1, .logo-overlay .logo-lefty-1 {
+    -webkit-transform:rotateY(180deg) rotateX(180deg);
+    -moz-transform:rotateY(180deg) rotateX(180deg);
+    -o-transform:rotateY(180deg) rotateX(180deg);
+    -ms-transform:rotateY(180deg) rotateX(180deg);
+    display:inline-block;
+}
+
+.logo .logo-linux, .logo-overlay:hover .logo-linux-1 {
+    -webkit-transform:rotateY(180deg);
+    -moz-transform:rotateY(180deg);
+    -o-transform:rotateY(180deg);
+    -ms-transform:rotateY(180deg);
+    display: inline-block;
+    margin-right: -0.21em;
+}
+
+.logo .logo-lefty {
+    display: inline-block;
+    margin-left: -0.21em;
+}
+
+.logo-overlay {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+}
+
+.logo-overlay .logo-linux-1 {
+    margin-right: -0.05em;
+}
+
+.logo-overlay .logo-lefty-1 {
+    margin-left: -0.05em;
+}
+
+nav {
+    text-align: center;
+}
