--- a/layouts/partials/powered-by.html
+++ b/layouts/partials/powered-by.html
@@ -1,8 +1,3 @@
-{{ if ne .Site.Params.powered_by false }}
-  <p class="muted">
-    This page was generated using
-    <a target="_blank" rel="noopener" href="https://comfusion.github.io/after-dark/">After Dark</a>
-    for
-    <a target="_blank" rel="noopener" href="https://gohugo.io/">Hugo</a>.
-  </p>
-{{ end }}
+<p class="muted">
+Unless otherwise stated, content on the site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
+</p>
