--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,11 +8,9 @@
   <header>
     <h1>{{ .Title }}</h1>
   </header>
-  {{ range (.Paginate (where .Data.Pages "Type" "post")).Pages }}
-    {{ partial "page-summary.html" . }}
-  {{ end }}
+  {{ .Content }}
+  <hr />
 {{ end }}
 {{ define "footer" }}
-  {{ partial "pagination.html" . }}
   {{ partial "powered-by.html" . }}
 {{ end }}
