--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -38,6 +38,7 @@
       </article>
     {{ end }}
     <footer>
+        <p class="muted">If you want to get in touch with me concerning anything you see on this site, drop me an email at <u>uselinux@gmail.com</u></p>
       <hr>
       {{ partial "post/byline.html" . }}
       {{ partial "post/related-content.html" . }}
