--- a/layouts/partials/head/critical-custom.css
+++ b/layouts/partials/head/critical-custom.css
@@ -1,3 +1,5 @@
+/* Colors from: https://github.com/chriskempson/tomorrow-theme */
+
 figure img {
     max-width: 100%;
 }
@@ -36,7 +38,7 @@ a:hover {
     background-color: #1d1f21
 }
 
-.dark h1 {
+h1 {
     color: #8abeb7;
     font-weight: bold;
 }
@@ -51,10 +53,10 @@ a:hover {
 }
 
 .hack h2::after {
+	bottom: 0;
 	content: "----------------------------------------------------------------------------------------------------";
-	position: absolute;
-	bottom: 0px;
 	left: 0;
+	position: absolute;
 }
 
 .hack h2[itemprop="name"] {
@@ -65,8 +67,16 @@ a:hover {
     content: "";
 }
 
-.dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
+h2, h3, h4, h5, h6 {
     color: #b5bd68;
+}
+
+.hack h1, .hack h2, .hack h3, .hack h4, .hack h5, .hack h6 {
+    margin-left: -1em;
+    margin-right: -1em;
+    padding-left: 1em;
+    padding-right: 1em;
+    margin-top: 3em;
 }
 
 .dark pre code {
@@ -74,10 +84,18 @@ a:hover {
 }
 
 .logo {
-    text-align: center;
     font-size: 200%;
     margin-bottom: 1em;
     margin-top: 1em;
+    text-align: center;
+}
+
+.logo-linux-1, .logo-lefty-1, .logo .logo-linux {
+    -webkit-transition: -webkit-all .8s ease-in-out;
+       -moz-transition: -moz-all .8s ease-in-out;
+        -ms-transition: -ms-all .8s ease-in-out;
+         -o-transition: -o-all .8s ease-in-out;
+            transition:         all .8s ease-in-out;
 }
 
 .logo-linux-1, .logo-lefty-1 {
@@ -111,49 +129,45 @@ a:hover {
 
 @media screen and (min-width: 480px) {
     .logo {
-        text-align: center;
         font-size: 400%;
+        text-align: center;
     }
 }
 
 @media screen and (min-width: 768px) {
     .logo {
-        text-align: center;
         font-size: 600%;
+        text-align: center;
     }
 }
 
-.logo:hover .logo-linux .logo-linux-1 {
-    -webkit-transform:rotateY(180deg);
-    -moz-transform:rotateY(180deg);
-    -o-transform:rotateY(180deg);
-    -ms-transform:rotateY(180deg);
-    display:inline-block;
-}
-
+.logo:hover .logo-linux, .logo .logo-linux-1, .logo .logo-lefty-1,
 .logo-overlay .logo-linux-1, .logo-overlay:hover .logo-lefty-1 {
+    display:inline-block;
     -webkit-transform:rotateY(0deg);
-    -moz-transform:rotateY(0deg);
-    -o-transform:rotateY(0deg);
-    -ms-transform:rotateY(0deg);
-    display:inline-block;
+       -moz-transform:rotateY(0deg);
+        -ms-transform:rotateY(0deg);
+         -o-transform:rotateY(0deg);
+            transform:rotateY(0deg);
 }
 
-.logo:hover .logo-lefty .logo-lefty-1, .logo-overlay .logo-lefty-1 {
+.logo:hover .logo-lefty-1, .logo-overlay .logo-lefty-1 {
+    display:inline-block;
     -webkit-transform:rotateY(180deg) rotateX(180deg);
-    -moz-transform:rotateY(180deg) rotateX(180deg);
-    -o-transform:rotateY(180deg) rotateX(180deg);
-    -ms-transform:rotateY(180deg) rotateX(180deg);
-    display:inline-block;
+       -moz-transform:rotateY(180deg) rotateX(180deg);
+        -ms-transform:rotateY(180deg) rotateX(180deg);
+         -o-transform:rotateY(180deg) rotateX(180deg);
+            transform:rotateY(180deg) rotateX(180deg);
 }
 
-.logo .logo-linux, .logo-overlay:hover .logo-linux-1 {
-    -webkit-transform:rotateY(180deg);
-    -moz-transform:rotateY(180deg);
-    -o-transform:rotateY(180deg);
-    -ms-transform:rotateY(180deg);
+.logo .logo-linux,.logo-overlay:hover .logo-linux-1 {
     display: inline-block;
     margin-right: -0.21em;
+    -webkit-transform:rotateY(180deg);
+       -moz-transform:rotateY(180deg);
+        -ms-transform:rotateY(180deg);
+         -o-transform:rotateY(180deg);
+            transform:rotateY(180deg);
 }
 
 .logo .logo-lefty {
@@ -162,8 +176,8 @@ a:hover {
 }
 
 .logo-overlay {
-    position: fixed;
     bottom: 5px;
+    position: fixed;
     right: 5px;
 }
 
@@ -178,3 +192,16 @@ a:hover {
 nav {
     text-align: center;
 }
+
+details {
+	background: #282a2e;
+	border: 1px solid #373b41;
+	margin-bottom: 1em;
+	margin-left: -1em;
+	margin-right: -1em;
+}
+
+details nav {
+    text-align: left;
+}
+
