--- a/layouts/partials/page-summary.html
+++ b/layouts/partials/page-summary.html
@@ -3,7 +3,7 @@
     <h2 itemprop="name">
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </h2>
-    {{ if eq .Type "post" }}
+    {{ if eq .Type "posts" }}
       <p class="muted">{{ partial "post/meta.html" . }}</p>
     {{ end }}
   </header>
