--- a/layouts/partials/powered-by.html
+++ b/layouts/partials/powered-by.html
@@ -1,3 +1,3 @@
 <p class="muted">
-Unless otherwise stated, content on the site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
+Unless otherwise stated, all original content and creatives on this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a> license.
 </p>
